# hrc_speech_prediction

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
data/: P11.json
hrc_speech_prediction/: CMakeLists.txt  bag_parsing.py  combined_model.py  context_model.py  data.py  defaults.py  display_plots.py  evaluate_tree_model.py  evaluation.py  features.py  models.py  nodes.py  plots.py  setup.py  speech_model.py  train_models.py  tree.py  vectorizer.pkl
hrc_speech_prediction/hrc_speech_prediction/: context_model.py  defaults.py  evaluation.py  features.py  models.py  plots.py  train_models.py  wrappers.py
hrc_speech_prediction/launch/: rosbag.launch  separate_s2t.launch  speech_prediction.launch
hrc_speech_prediction/models/: combined_model_0.150.15.pkl  model_both_table.pkl  model_speech_table.pkl  vocabulary.pkl
hrc_speech_prediction/scripts/: controller.py  evaluate_offline.py  evaluate_speech_model.py  rewind_context.py
hrc_speech_prediction/templates/: README.md
hrc_speech_prediction/tests/: test_combined_model.py  test_context_model.py  test_features.py  test_participant.json
hrc_speech_prediction_msgs/: CMakeLists.txt  package.xml
hrc_speech_prediction_msgs/msg/: DataLog.msg
launch/: display_plots.launch  rosbag.launch  speech_prediction.launch
models/: combined_model_0.150.15.pkl
scripts/: autonomous_controller.py  autonomous_controller.py.orig  controller.py  display_plots.py  evaluateModel.py  evaluate_model.py  evaluate_on_test.py  evaluate_speech_model.py  evaluate_tree_model.py  generate_novel_participant.py  nodes.py  parse_bags.py  participant_summary.py  rosbag2vec.py  speechPredictorOnline.py  test_data.json  test_speech_eps.py  trainSpeechPredictor.py  train_models.py  train_models.py.orig  train_speech_predictor.py  video_allocation.py
scripts/archive/: evaluate_model.py
scripts/data/: generate_novel_participant.py  participant_summary.py  train.json
tests/: display_plots.test  test_combined_model.py  test_data.py
(+16 files in other folders)
